--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'stable', version: '60-1.15'
+    mappings channel: 'snapshot', version: '20200425-1.15.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -92,6 +92,9 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.15.2-31.2.5'
 
-    deobf fg.deobf("curse.maven:dynamic-renderer:2967450")
-    runtimeOnly fg.deobf("curse.maven:dynamic-renderer:2967450")
+    //UPDATE TO 2971352
+    deobf fg.deobf("curse.maven:dynamic-renderer:2971352")
+    runtimeOnly fg.deobf("curse.maven:dynamic-renderer:2971352")
+//    runtimeOnly fg.deobf("curse.maven:enchanted-book-redesign:2968446")
+    runtimeOnly fg.deobf("curse.maven:place-preview:2932439")
 }
