--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -27,7 +27,7 @@ displayName="SkyIsles" #mandatory
 authors="GiantLuigi4,DNDCrafter64" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-a\n\nCredits:Ferocidad897
+a\n\nCredits:Ferocidad897,ThatAngel,DomasLt
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 #[[dependencies.skyisles]] #optional
@@ -42,9 +42,10 @@ a\n\nCredits:Ferocidad897
 #    # Side this dependency is applied on - BOTH, CLIENT or SERVER
 #    side="BOTH"
 # Here's another dependency
-#[[dependencies.skyisles]]
-#    modId="minecraft"
-#    mandatory=true
-#    versionRange="[1.14.4]"
-#    ordering="NONE"
-#    side="BOTH"
+[[dependencies.skyisles]]
+    modId="dynamic_rendering"
+    mandatory=true
+    versionRange="[1.3,)"
+    ordering="NONE"
+    side="BOTH"
+
