--- a/build.gradle
+++ b/build.gradle
@@ -92,9 +92,9 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft 'net.minecraftforge:forge:1.15.2-31.2.5'
 
-    //UPDATE TO 2971352
-    deobf fg.deobf("curse.maven:dynamic-renderer:2971352")
-    runtimeOnly fg.deobf("curse.maven:dynamic-renderer:2971352")
+    //TODO:UPDATE TO 2975465
+    deobf fg.deobf("curse.maven:dynamic-renderer:2975465")
+    runtimeOnly fg.deobf("curse.maven:dynamic-renderer:2975465")
 //    runtimeOnly fg.deobf("curse.maven:enchanted-book-redesign:2968446")
-    runtimeOnly fg.deobf("curse.maven:place-preview:2932439")
+//    runtimeOnly fg.deobf("curse.maven:place-preview:2975672")
 }
