Better FPS Graph integration.

--- a/build.gradle
+++ b/build.gradle
@@ -103,8 +103,10 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.15.2-31.2.5'
 
     //TODO:UPDATE TO 2994933
-    deobf fg.deobf("curse.maven:dynamic-renderer:2994933")
-    runtimeOnly fg.deobf("curse.maven:dynamic-renderer:2994933")
+    compile fg.deobf("curse.maven:dynamic-renderer:2994933")
+
+    compile fg.deobf("curse.maven:better-fps-graph:3021769")
+
     runtimeOnly fg.deobf("curse.maven:enchanted-book-redesign:2968446")
     runtimeOnly fg.deobf("curse.maven:place-preview:2975672")
 //    implementation 'com.github.GiantLuigi4:Dynamic_Renderer:-SNAPSHOT'
