--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,12 +7,13 @@
 modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
 loaderVersion="[28,)" #mandatory (26 is current forge version)
+license="[TODO]"
 # A list of mods - how many allowed here is determined by the individual mod loader
 [[mods]] #mandatory
 # The modid of the mod
 modId="skyisles" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="${file.jarVersion}" #mandatory
+version="0.0" #mandatory
 # A display name for the mod
 displayName="SkyIsles" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
@@ -29,23 +30,12 @@ authors="GiantLuigi4,DNDCrafter64" #optional
 description='''
 a\n\nCredits:Ferocidad897,ThatAngel,DomasLt
 '''
-# A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
-#[[dependencies.skyisles]] #optional
-#    # the modid of the dependency
-#    modId="forge" #mandatory
-#    # Does this dependency have to exist - if not, ordering below must be specified
-#    mandatory=true #mandatory
-#    # The version range of the dependency
-#    versionRange="[28,)" #mandatory
-#    # An ordering relationship for the dependency - BEFORE or AFTER required if the relationship is not mandatory
+
+
+#[[dependencies.skyisles]]
+#    modId="dynamic_rendering"
+#    mandatory=true
+#    versionRange="[1.8,)"
 #    ordering="NONE"
-#    # Side this dependency is applied on - BOTH, CLIENT or SERVER
 #    side="BOTH"
-# Here's another dependency
-[[dependencies.skyisles]]
-    modId="dynamic_rendering"
-    mandatory=true
-    versionRange="[1.8,)"
-    ordering="NONE"
-    side="BOTH"
 
